# storage-framework

./: .bzrignore  CMakeLists.txt  CTestCustom.cmake.in  HACKING  get-provider-soversion.sh  snapcraft.yaml
doc/: CMakeLists.txt  provider_tut.dox  tutorial.dox
include/unity/storage/: CMakeLists.txt  common.h  visibility.h
include/unity/storage/client/: Account.h  AccountsResult.h  CreateResult.h  DestroyResult.h  Directory.h  DownloadResult.h  Downloader.h  File.h  Item.h  IterationResult.h  MetadataResult.h  ParentResult.h  Root.h  Runtime.h  UploadResult.h  Uploader.h  Variant.h
include/unity/storage/common/: common.h  visibility.h
include/unity/storage/common/internal/: gobj_memory.h  mimetype.h
include/unity/storage/internal/: AccountDetails.h  ActivityNotifier.h  EnvVars.h  InactivityTimer.h  ItemMetadata.h  MetadataKeys.h  TraceMessageHandler.h  dbus_error.h  dbusmarshal.h  gobj_memory.h  metadata_keys.h  safe_strerror.h  validate.h
include/unity/storage/provider/: CMakeLists.txt  Credentials.h  DownloadJob.h  Exceptions.h  Item.h  ProviderBase.h  Server.h  TempfileUploadJob.h  UploadJob.h  metadata_keys.h  visibility.h
include/unity/storage/provider/internal/: AccountData.h  CredentialsCache.h  DBusPeerCache.h  DisconnectWatcher.h  DownloadJobImpl.h  FixedAccountData.h  Handler.h  MainLoopExecutor.h  OnlineAccountData.h  PendingJobs.h  ProviderInterface.h  ServerImpl.h  TempfileUploadJobImpl.h  TestServerImpl.h  UploadJobImpl.h  dbusmarshal.h  utils.h
include/unity/storage/provider/testing/: CMakeLists.txt  TestServer.h
include/unity/storage/qt/: Account  Account.h  AccountsJob  AccountsJob.h  CMakeLists.txt  ConflictPolicy.h  DownloadJob  Downloader  Downloader.h  Item  Item.h  ItemJob  ItemJob.h  ItemListJob.h  MetadataKeys.h  MetadataKeys.h.THIS  Runtime  Runtime.h  StorageError  StorageError.h  UploadJob  Uploader  Uploader.h  VoidJob  VoidJob.h
include/unity/storage/qt/client/: Account.h  CMakeLists.txt  Directory.h  Downloader.h  Exceptions.h  File.h  Folder.h  Item.h  Metadata.h  Root.h  Runtime.h  (+3 more)
include/unity/storage/registry/: Registry.h
plugins/Ubuntu/StorageFramework/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir
src/internal/: AccountDetails.cpp  CMakeLists.txt  EnvVars.cpp  InactivityTimer.cpp  TraceMessageHandler.cpp  dbusmarshal.cpp  safe_strerror.cpp  validate.cpp
src/local-provider/: CMakeLists.txt  LocalDownloadJob.cpp  LocalDownloadJob.h  LocalProvider.cpp  LocalProvider.h  LocalUploadJob.cpp  LocalUploadJob.h  com.canonical.StorageFramework.Provider.Local.service.in  main.cpp  storage-provider-local.service.in  utils.cpp  utils.h
src/provider/: CMakeLists.txt  DownloadJob.cpp  Exceptions.cpp  ProviderBase.cpp  Server.cpp  TempfileUploadJob.cpp  UploadJob.cpp  storage-framework-provider.pc.in
src/provider/internal/: AccountData.cpp  CredentialsCache.cpp  DBusPeerCache.cpp  DisconnectWatcher.cpp  DownloadJobImpl.cpp  FixedAccountData.cpp  Handler.cpp  MainLoopExecutor.cpp  OnlineAccountData.cpp  PendingJobs.cpp  ProviderInterface.cpp  ServerImpl.cpp  TempfileUploadJobImpl.cpp  TestServerImpl.cpp  UploadJobImpl.cpp  dbusmarshal.cpp  utils.cpp
src/provider/testing/: TestServer.cpp
src/qt/: Account.cpp  AccountsJob.cpp  CMakeLists.txt  Downloader.cpp  Item.cpp  ItemJob.cpp  ItemListJob.cpp  Runtime.cpp  StorageError.cpp  Uploader.cpp  VoidJob.cpp
src/qt/client/: Account.cpp  CMakeLists.txt  Directory.cpp  Downloader.cpp  Exceptions.cpp  File.cpp  Folder.cpp  Item.cpp  Metadata.cpp  Root.cpp  Runtime.cpp  StorageSocket.cpp  Uploader.cpp  api2.cpp  storage-framework-qt-client-1.pc  storage-framework-qt-client-1.pc.in  storage-framework-qt-client.pc.in  storage-framework-qt-local-client-1.pc  storage-framework-qt-local-client.pc.in
src/qt/client/internal/: AccountBase.cpp  AccountImpl.cpp  CMakeLists.txt  DirectoryImpl.cpp  DownloaderBase.cpp  DownloaderImpl.cpp  FileBase.cpp  FileImpl.cpp  FolderBase.cpp  FolderImpl.cpp  ItemBase.cpp  ItemImpl.cpp  MetadataImpl.cpp  RootBase.cpp  RootImpl.cpp  RuntimeBase.cpp  RuntimeImpl.cpp  UploaderBase.cpp  UploaderImpl.cpp
src/qt/internal/: AccountImpl.cpp  AccountsJobImpl.cpp  DownloaderImpl.cpp  HandlerBase.cpp  ItemImpl.cpp  ItemJobImpl.cpp  ItemListJobImpl.cpp  ListJobImplBase.cpp  MultiItemJobImpl.cpp  MultiItemListJobImpl.cpp  RuntimeImpl.cpp  StorageErrorImpl.cpp  UploaderImpl.cpp  VoidJobImpl.cpp  unmarshal_error.cpp  validate.cpp
src/qt/local_client/: AccountImpl.cpp  CMakeLists.txt  DownloaderImpl.cpp  FileImpl.cpp  FolderImpl.cpp  ItemImpl.cpp  RootImpl.cpp  RuntimeImpl.cpp  UploaderImpl.cpp  storage-framework-qt-local-client.pc.in
src/registry/: CMakeLists.txt  com.canonical.StorageFramework.Registry.service.in  main.cpp  storage-framework-registry.service.in
src/registry/internal/: ListAccountsHandler.cpp  RegistryAdaptor.cpp  qdbus-last-error-msg.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  client_test.cpp
tests/copyright/: check_copyright.sh
tests/debian-version/: CMakeLists.txt  check-debian-version.sh
tests/headers/: CMakeLists.txt  check_public_headers.py  compile_headers.py
tests/local-client/: CMakeLists.txt  local-client_test.cpp
tests/local-provider/: CMakeLists.txt  local-provider_test.cpp
tests/provider-AccountData/: AccountData_test.cpp  CMakeLists.txt
tests/provider-DBusPeerCache/: CMakeLists.txt  DBusPeerCache_test.cpp
tests/provider-ProviderInterface/: CMakeLists.txt  ProviderInterface_test.cpp  TestProvider.cpp  TestProvider.h
tests/provider-Server/: CMakeLists.txt  Server_test.cpp
tests/provider-utils/: CMakeLists.txt  utils_test.cpp
tests/registry/: CMakeLists.txt  registry_test.cpp
tests/remote-client/: CMakeLists.txt  MockProvider.cpp  MockProvider.h  remote-client_test.cpp
tests/remote-client-v1/: CMakeLists.txt  MockProvider.cpp  MockProvider.h  remote-client-v1_test.cpp
tests/utils/: CMakeLists.txt  DBusEnvironment.cpp  DBusEnvironment.h  FakeProvider.cpp  FakeProvider.h  ProviderFixture.cpp  ProviderFixture.h  fake-online-accounts-daemon.py  gtest_printer.cpp
tests/whitespace/: CMakeLists.txt
(+175 files in other folders)
